chore: redis cache
